--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -489,8 +489,9 @@ on post-fs-data
 on property:sys.boot_completed=1
     #allow CPUs to go in deeper idle state than C0
     write /sys/module/lpm_levels/parameters/sleep_disabled 0
-    start zram-init
     start perfd
+    start tfa-sh
+    start zram-init
     write /dev/kmsg "Boot completed "
 
     # Set Memory parameters
