--- a/rootdir/etc/init.qcom.power.rc
+++ b/rootdir/etc/init.qcom.power.rc
@@ -15,6 +15,9 @@ on charger
     write /sys/devices/system/cpu/cpu7/online 0
     write /sys/module/msm_thermal/core_control/enabled 1
     write /sys/module/lpm_levels/parameters/sleep_disabled N
+    write /sys/devices/soc.0/f9824900.sdhci/clkscale_enable 1
+    write /sys/devices/soc.0/f9824900.sdhci/clkgate_enable 1
+    write /sys/devices/soc.0/f9824900.sdhci/hibern8_on_idle_enable 1
 
 service charger /charger
     class charger
@@ -23,3 +26,8 @@ service charger /charger
 
 on property:dev.bootcomplete=1
     setprop sys.io.scheduler "bfq"
+    
+on late-fs
+    write /sys/block/mmcblk0/queue/iostats 0
+    write /sys/block/mmcblk0/queue/nr_requests 256
+    write /sys/block/mmcblk0/queue/iosched/slice_idle 0
