--- a/rootdir/etc/init.qcom.power.rc
+++ b/rootdir/etc/init.qcom.power.rc
@@ -25,7 +25,7 @@ service charger /charger
     writepid /dev/cpuset/system-background/tasks
 
 on property:dev.bootcomplete=1
-    setprop sys.io.scheduler "bfq"
+    setprop sys.io.scheduler "maple"
     
 on late-fs
     write /sys/block/mmcblk0/queue/iostats 0
